--- a/package.json
+++ b/package.json
@@ -1,18 +1,31 @@
 {
   "name": "vue-smart-cascader",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.1",
+  "description": "a vue cascader plugin",
+  "author": "donghuizhou",
+  "private": false,
+  "main": "./src/main.js",
+  "license": "MIT",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "element-ui": "^2.15.14",
+    "less": "^4.2.0",
+    "less-loader": "^11.1.3",
     "vue": "^2.6.14"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "babel-plugin-component": "^1.1.1",
     "vue-template-compiler": "^2.6.14"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/donghuizhou/vue-smart-cascader"
+  },
+  "homepage": "https://github.com/donghuizhou/vue-smart-cascader"
 }
