--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "element-ui": "^2.15.14",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
+    "lodash": "^4.17.21",
+    "normalize.css": "^8.0.1",
     "vue": "^2.6.14"
   },
   "devDependencies": {
